--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -10,7 +10,10 @@
       </ul>
       <ul class="nav navbar-nav nav-right">
         <li class="nav-item">
-          <a class="nav-link" href="/">Dashboard<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/dashboard">Dashboard<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/precautions">Precautions</a>
