--- a/templates/home.html
+++ b/templates/home.html
@@ -7,12 +7,13 @@
 >
   <div class="container">
     <h1>Corona virus 2019 India Statistics</h1>
-    <form class="form-inline" style="margin-left:35%; margin-top: 25px;">
+    <form method="POST" class="form-inline" style="margin-left:35%; margin-top: 25px;" >
       <input
         class="form-control mr-sm-2"
         type="search"
         placeholder="Search"
         aria-label="Search"
+        name='search'
       />
       <button class="btn btn-primary" type="submit">Search</button>
     </form>
