--- a/templates/helpline.html
+++ b/templates/helpline.html
@@ -5,5 +5,8 @@
 {% endblock title %}
 
 {% block body %}
-  9324810612
+<div class="container" style="width:100%; height:800px;">
+  <iframe src="/static/coronvavirushelplinenumber.pdf" style="width: 100%; height:inherit; background-color: white;"></iframe>
+</div>
+
 {% endblock body %}
