--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="/dashboard">Dashboard<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/precautions">Precautions</a>
+          <a class="nav-link" href="/helpful_links">Helpful Links</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/helpline">Helpline</a>
